# react-embed

./: LICENSE  README.md
ClientApp/: package-lock.json  package.json  webpack.config.js
ClientApp/src/: App.tsx  ContainerApi.ts  ContainerApiContext.ts  index.html  index.tsx
QtContainer/: CMakeLists.txt  containerapi.cpp  containerapi.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.css  websocketclientwrapper.cpp  websocketclientwrapper.h  websockettransport.cpp  websockettransport.h
WebContainer/: package-lock.json  package.json  webpack.config.js
WebContainer/src/: App.js  index.html  index.js
